# saleor

./: .babelrc  .bowerrc  .buildpacks  .codeclimate.yml  .coveragerc  .dockerignore  .editorconfig  .env  .env-template  .env.example  .env.sample  .eslintrc  .eslintrc.json  .flowconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gqlconfig  .isort.cfg  .landscape.yml  .mjmlconfig  .npmrc  .pre-commit-config.yaml  .prettierrc.json  .pylintrc  .rancher-pipeline.yml  .release-it.json  .sample_env  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Contributors.md  Dockerfile  Dockerfile.dev  (+118 more)
.circleci/: config.yml
.devcontainer/: Dockerfile  LICENSE  README.md  backend.env  common.env  devcontainer.json  docker-compose.yml  setup-e2e-db.sh
.ebextensions/: 01_packages.config  02_python.config  03_django.config  04_postinst.config
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  graphql-inspector.yaml  main.workflow  stale.yml
.nullstone/: config.yml  previews.yml
.plop/: plopfile.js
.semgrep/: Makefile  no-use-requests-lib.fixed.py  no-use-requests-lib.yaml
.storybook/: config.js
.testcafe/: exampleTest.js
.tx/: config
.worktree-container/: README.md  compose.sh  docker-compose.yml
alter_product/: apps.py  error_codes.py
api-tests/: .env  .env-example  .env.localk  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  codegen.ts  eslint-local-rules.ts  eslintrc.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
build-scripts/: gs_credentials_create.py
cart/: __init__.py  admin.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
checkout/: __init__.py  actions.py  base_calculations.py  complete_checkout.py  delivery_context.py  error_codes.py  forms.py  middleware.py  payment_utils.py  steps.py  tests.py  urls.py  views.py
cloneproduct/: apps.py  error_codes.py
communication/: tests.py
compose/: entrypoint.sh  start.sh
css/: app.06a9da9890ee862d8003.css  app.7bf906ff4830abc0b210.css  saleor.css
custom/: apps.py  error_codes.py  models.py
default_pages/: privacy-policy.md  selling-contract.md
defaults/: main.yml
delivery/: __init__.py
discount/: __init__.py  admin.py  models.py  tests.py
docker/: celery-entrypoint.sh  celerybeat-entrypoint.sh  logstash.conf  rabbitmq-entrypoint.sh
docs/: FILE_MOVEMENT_IMPACT_ASSESSMENT.md  FILE_ORGANIZATION_SUMMARY.md  Makefile  QUICK_NAVIGATION.md  README.md  architecture.rst  conf.py  configuration.rst  contentsearch.rst  contributing.rst  customization.rst  deploy.rst  deployment.rst  development.rst  elasticsearch.rst  gettingstarted.rst  guides.rst  index.rst  install.rst  installation.rst  integrations.rst  localization.rst  make.bat  orders.rst  payment-gateways.rst  payments.rst  postgres_search.rst  products.rst  reporting.rst  search.rst  seo.rst  settings.rst  social.rst  stock.rst
features/: index.html
federation/: Procfile  index.js  package-lock.json  package.json
fixtures/: menu.yaml  site.yaml
front/: apps.py
handlers/: main.yml
images/: greatExperience.json  parrot.json
js/: app.6416e09cb60637422f69.js  app.7b4687d2f66d9457a362.js  app.e1525e3aa576aa0a0d39.js  app.js  jquery.js
less/: saleor.less
locale/: translate.py
meta/: main.yml
order/: __init__.py  actions.py  admin.py  calculations.py  events.py  forms.py  interface.py  models.py  steps.py  urls.py  views.py
payment/: __init__.py  fields.py  forms.py  interface.py  lock_objects.py  models.py  urls.py  views.py  widgets.py
privacy/: index.html
privacy-policy-terms-and-conditions/: index.html
product/: __init__.py  admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
python_paystack/: managers.py  mixins.py  paystack_config.py
registration/: backends.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
roadmap/: index.html
saleor/: __init__.py  __main__.py  admin.py  celery.py  celery_mail.py  celeryconf.py  circuit_breaker.py  context_processors.py  countries.py  dbrouters.py  mercuriemart.json  middleware.py  models.py  patch_gzip.py  patch_local.py  pharmacy_settings.py  prefer_import.py  seed_produce.py  seed_produce_shell.py  seed_produce_simple.py  settings.py  settings_demo.py  settings_example.py  telemetry.py  test_settings.py  tests.py  tracing.py  urls.py  utils.py  views.py  wecre8_settings.py  wsgi.py
saleor-storefront/: .gitignore  CHANGELOG.md  LICENSE  README.md  apollo.config.js  app.json  cypress.json  package-lock.json  package.json  static.json  tsconfig.json  tslint.json  webpack.config.js  webpack.d.ts
saleor-venv/: pyvenv.cfg
scripts/: README.md  deploy_master.sh  generate_graphql_docs.py  push_static.sh
shipping/: __init__.py
shop/: __init__.py  settings.py  tests.py  urls.py  wsgi.py
similar-product/: request.py  result.csv  schema.json  similar-product.graphql
similar_product/: query.graphql  server.js
source/: index.md
src/: business.jade  consts.js  developers.jade  index.ejs  index.html  index.jade  index.js  index.jsx  main.css  site.js  style.scss
static/: site.js  site.js.map  style.css  style.css.map
stock_notification/: apps.py  error_codes.py  models.py  prefer_import.py
stories/: decorator.js  index.js
tasks/: main.yml
templates/: 404.html  _content_formatting.html  _cookie_prompter_box.html  _items.html  _language_picker.html  _language_picker_modal.html  base.html  cart-dropdown.html  cart_dropdown.html  checkout_dropdown.html  favicon.html  footer_menu.html  formatted_address.html  home.html  invoice.html  invoice_products_table.html  invoice_summary_table.html  manifest.json  menu.html  navbar_menu.html  offline.html  oye-base.html  paystack_button.html  price.html  privacy_policy.html  product_filters.html  product_list_base.html  robots.txt  serviceworker.js  status_label.html  styleguide.html  weight_field_widget.html
tests/: README.md  conftest.py  dummy_password_hasher.py  fixtures.py  runner.py  settings.py  test_account.py  (+62 more)
(+12789 files in other folders)
